--- a/Chrome/ezman_updater/option.css
+++ b/Chrome/ezman_updater/option.css
@@ -22,6 +22,15 @@ input[type='button'] {
 	width: 180px;
 }
 
+table {
+	border-collapse:collapse;
+}
+
+table, th, td {
+  border: 1px solid black;
+  padding: 5px;
+}
+
 #button_area {
 	margin-top: 10px;
 }
